--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-leap-day\
+webrick:
+  headers:
+    My-Header: 潜学立艺
+    My-Other-Header: My-Other-Value
